--- a/Knowledgeserviceplatform/pytest.ini
+++ b/Knowledgeserviceplatform/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -v --reruns 2 --reruns-delay 2  --alluredir=Report/report --html=Report/html/report.html
-testpaths=Test/TestCase
+testpaths=Knowledgeserviceplatform/Test/TestCase
 python_file=test_*.py
 python_class=Test*
 python_functions=test_*
